# tesserocr-pool-rs

./: Cargo.toml
src/: lib.rs  tess.rs
