[package]
authors = ["Stefan Lukas <etaloof@gmail.com>"]
name = "tesserocr_pool_rs"
version = "0.1.0"
edition = "2018"

[dependencies]
rayon = "1.5.0"
leptess = "0.9.0"
numpy = "0.12.1"
pyo3 = { version = "0.12.3" }
image = { version = "0.23.12", features = [ "bmp" ], default_features = false }
num_cpus = "1.13.0"
bincode = "1.3.1"
spmc = "0.3.0"

[dev-dependencies]
minifb = "0.19.1"